<resources>
    <string name="app_name">ImCooking</string>

    <string name="error">Sorry, we are facing some connectivity error, please try again or report us.</string>
    <!--<string name="server_error">Server Error</string>-->
    <!--activity login-->
    <string name="txtUserName">USER NAME</string>
    <string name="txtPassword">PASSWORD</string>
    <string name="txtForgot">Forgot Password ?</string>
    <string name="txtLogin">Log in</string>
    <string name="txtDonthave">Don\'t have an account ?</string>
    <string name="txtRegister">Register</string>
    <string name="no_working"> not working</string>

    <!--Alert Dialog-->
    <string name="gps_sett">GPS is settings</string>
    <string name="gps_not_enabled">GPS is not enabled. Do you want t o go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="cancle">Cancel</string>

    <!--activity signup-->
    <string name="txtEmail">EMAIL</string>
    <string name="txtConfirmPass">CONFIRM PASSWORD</string>
    <string name="txtAlready">Already Member ?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="API_KEY">AIzaSyD6s-Dnu0QwVRtwDfcO9jz2OKb5kk8JgT8</string>
    <string name="retry">Retry</string>

    <string name="other_dish_by_user"><u>Other dish by chef</u></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--activity filter-->
    <string name="activity_filter_txtDistance">Distance </string>
    <string name="activity_filter_txtRating">Rating </string>
    <string name="activity_filter_txtPrice">Select Price </string>
    <string name="activity_filter_txtDeliveryType">Delivery Type </string>

    <string name="network_error">Please Check Your Internet Connection</string>
    <string name="server_error">Server Error</string>

    <!--dialog cart chef added-->
    <string name="txt_foodie_info">Oops! you can\'t add dishes from other chef. To add this dish(which is from different chef) you need to remove dishes from previously added chef.</string>
    <string name="txt_foodie_yes">Remove</string>
    <string name="txt_foodie_no">Cancel</string>

    <!--activity payment -->
    <string name="activity_payment_txt_place_order">PLACE ORDER</string>

    <!--EditDish-->
    <string name="dish_updated_failed">Dish Updated Failed</string>
    <!--dialog view response -->
    <string name="dialog_view_response_offer_price">Offer Price</string>

    <!--dialog save address -->
    <string name="dialog_save_address_save_this_address">Save this address</string>

    <!--fragment profile -->
    <string name="fragment_profile_change_pass">Change Password</string>


    <!--chefprofile-->
    <string name="dialog_add_dish_text_1">To Add a Dish to your profile you must need to Update your Profile first.</string>
    <string name="dialog_add_dish_text_2">To Add a Dish to your profile you must need to Add Cuisines to your Profile first.</string>
    <string name="dialog_add_dish_text_3">To Request a Dish, you must need to Update your Profile first.</string>
    <string name="dialog_add_dish_text_4">Please update your Name and phone number to proceed.</string>

    <!--activity pay-->
    <string name="check">Check</string>
    <string name="cvv">CVV</string>
    <string name="expiry">Expiry</string>
    <string name="card_number">Card Number</string>
    <string name="pay">Pay</string>
    <string name="yy">YY</string>
    <string name="expiry_month">MM</string>
    <string name="email">Email</string>

</resources>
